--- a/www/_spdview.css
+++ b/www/_spdview.css
@@ -48,8 +48,8 @@ li {
   margin: 0px;
   padding: 5px;
   border-spacing: 0px;
-  text-align: center;
-  vertical-align: middle;
+  text-align: left;
+  vertical-align: top;
   background-color: white;
   color: black;
 }
@@ -57,3 +57,42 @@ table {
    padding: 0px;
    border-spacing: 0px;
 }
+/* style used for the body of the file info */
+.spdview_dropdown_info {
+  background-color: white;
+  color: black;
+  z-index:5;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  border: solid 1px;
+  display:none;
+  position:fixed;
+  top: 34px;
+  padding: 3px 6px;
+  font-size: 70%;
+}
+/* style used for the outer element of popups */
+.spdview_dropdown {
+  position:relative;
+  display:inline;
+}
+/* style used for the navigation toolbar */
+.spdview_nav_toolbar {
+  position:fixed;
+  top:0;
+  width:100%;
+  height:28px;
+  overflow:hidden;
+  z-index:3;
+  margin:0;
+  padding:0;
+  background-color: white;
+  color: black;
+}
+/* style used for images in the navigation toolbar */
+.spdview_nav_img {
+  display:block;
+  border:0;
+  width:40px;
+}
+	
+	
